fix overflowing select boxes

--- a/frontend/src/scss/components/_forms.scss
+++ b/frontend/src/scss/components/_forms.scss
@@ -86,7 +86,7 @@ form.create-group, form.create-student, form.create-new-plan, form.edit-teacher 
 
 	.select {
 		position: relative;
-		width: 100%;
+		// width: 100%;
 
 		&:before {
 			font-family: "fontello";
